[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credhound"
version = "2.9.1"
description = "ðŸ• CredHound - ë¡œì»¬ íŒŒì¼ ë³´ì•ˆ credential íƒì§€ ë„êµ¬ (ì—…ê³„ í‘œì¤€ ì¤€ìˆ˜)"
readme = "README.md"
authors = [{name = "Mingyu Park", email = "uqwe00@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/milv0/credhound"

[project.scripts]
credhound = "credhound.cli:main"

[tool.setuptools]
py-modules = ["scanner", "main", "reporter"]

[tool.setuptools.packages.find]
include = ["credhound*"]

[tool.setuptools.package-data]
credhound = ["*.yaml"]
