[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credhound"
version = "2.9.4"
description = "🐕 CredHound - 로컬 파일 보안 credential 탐지 도구 (업계 표준 준수)"
readme = "README.md"
authors = [{name = "Mingyu Park", email = "uqwe00@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/milv0/credhound"

[project.scripts]
credhound = "credhound.cli:main"

[tool.setuptools]
py-modules = ["scanner", "main", "reporter"]

[tool.setuptools.packages.find]
include = ["credhound*"]

[tool.setuptools.package-data]
credhound = ["*.yaml"]
